--- a/src/components/commonComponent/commonSearch/commonSearch.scss
+++ b/src/components/commonComponent/commonSearch/commonSearch.scss
@@ -2,6 +2,9 @@
   display: flex;
   align-items: center;
   margin-left: 10px;
+  @media only screen and (max-width: 1024px) {
+    margin-bottom: 10px;
+  }
   img {
     height: 15px;
   }
