--- a/src/containers/mainSiteManagers/sitemanager.scss
+++ b/src/containers/mainSiteManagers/sitemanager.scss
@@ -11,6 +11,10 @@
     font-size: 32px;
     line-height: 42px;
     color: #0d0d39;
+    
+    @media only screen and (max-width: 660px) {
+      font-size: 20px;
+   }
   }
 }
 .view-more-btn {
@@ -24,12 +28,12 @@
 }
 
 .main-site-manager {
-  display: inline-flex ;
-  justify-content: space-around ;
-  flex-wrap: wrap ;
+  display: inline-flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
 }
 
-.site-error{
+.site-error {
   font-family: DM Sans;
   font-style: normal;
   font-weight: bold;
@@ -38,6 +42,6 @@
   color: red;
 }
 
-.site-manager-margin{
+.site-manager-margin {
   margin-bottom: 20px;
 }
