--- a/src/components/dashboard/dashboardServices/dashboardservices.scss
+++ b/src/components/dashboard/dashboardServices/dashboardservices.scss
@@ -7,6 +7,10 @@
   height: 331px;
   margin-right: 10px;
   width: 60%;
+  @media only screen and (max-width: 768px) {
+    width: 100% !important;
+  }
+
   .services-main {
     display: flex;
     justify-content: space-between;
@@ -92,7 +96,7 @@
           color: #000000;
         }
       }
-      .order-percentage:last-child{
+      .order-percentage:last-child {
         padding-right: 10px;
       }
     }
