--- a/src/components/dashboard/totalSpend/totalspend.scss
+++ b/src/components/dashboard/totalSpend/totalspend.scss
@@ -8,6 +8,9 @@
     padding: 33px 20px 20px;
     border: 2px solid #ececec;
     box-sizing: border-box;
+    @media only screen and (max-width: 1425px) {
+      padding: 12px 20px 20px;
+    }
     .chartInfo {
       h1 {
         font-family: "BasierCircleBold";
@@ -20,6 +23,9 @@
         color: #0d0d39;
         margin: 0px;
         margin-bottom: 3px;
+        @media only screen and (max-width: 380px) {
+          font-size: 25px;
+        }
       }
     }
 
