--- a/src/components/dashboard/jobStatus/jobStatus.scss
+++ b/src/components/dashboard/jobStatus/jobStatus.scss
@@ -1,5 +1,6 @@
 .jobcard {
   width: 190px;
+  margin-right: 10px;
   @media only screen and (max-width: 768px) {
     margin-bottom: 10px;
     margin-right: 10px;
