sites and tipping isses fixed

--- a/src/assets/styles/scss/_variables.scss
+++ b/src/assets/styles/scss/_variables.scss
@@ -179,6 +179,17 @@ $v110: 110px;
   font-weight: bolder;
   color: #29aae2;
 }
+.normal-dsans-10-primary1 {
+  font-family: DM Sans;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 10px;
+  line-height: 13px;
+  display: contents;
+  font-weight: bolder;
+  color: #29aae2;
+  cursor: pointer;
+}
 // info window of google map
 
 .gm-style .gm-style-iw-c {
