fix ticket download issue

--- a/src/assets/styles/scss/_variables.scss
+++ b/src/assets/styles/scss/_variables.scss
@@ -190,6 +190,15 @@ $v110: 110px;
   color: #29aae2;
   cursor: pointer;
 }
+.normal-dsans-10-tooltip {
+  font-family: DM Sans;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 10px;
+  line-height: 13px;
+  font-weight: bolder;
+  color: #29aae2;
+}
 // info window of google map
 
 .gm-style .gm-style-iw-c {
