--- a/src/containers/mainSites/sites.scss
+++ b/src/containers/mainSites/sites.scss
@@ -21,3 +21,11 @@
 .table-body-row1 {
   min-height: 58px;
 }
+.sitenotfound {
+  font-family: DM Sans;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 30px;
+  color: red;
+}
