--- a/src/components/modals/createJob/createJob.scss
+++ b/src/components/modals/createJob/createJob.scss
@@ -544,3 +544,26 @@
   font-size: 12px;
   text-align: right;
 }
+.marketMain {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  position: relative;
+}
+.remaining-balance {
+  margin-left: 30px;
+  font-family: DM Sans;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+}
+.tool-img {
+  position: relative;
+  cursor: pointer;
+}
+.payLoading {
+  display: flex;
+  justify-content: center;
+  width: 40%;
+  margin-top: 10px;
+}
