--- a/src/components/commonComponent/toolTipCard/toolTipCard.scss
+++ b/src/components/commonComponent/toolTipCard/toolTipCard.scss
@@ -3,8 +3,7 @@
   background-color: #f6f6f6;
   border: 1px solid #259dda;
   border-radius: 10px;
-  padding: 10px;
-  max-width: 270px;
+  padding: 20px 25px;
   font-family: DM Sans;
   font-style: normal;
   font-weight: normal;
@@ -14,4 +13,16 @@
   top: 0;
   right: 15px;
   z-index: 1;
+}
+
+.tooltip {
+  max-width: 270px;
+  width: 270px;
+  display: flex;
+  flex: 1;
+  position: relative;
+}
+
+.iconClose {
+  flex: 1;
 }
