fix reset report page

--- a/src/components/reports/report.scss
+++ b/src/components/reports/report.scss
@@ -46,4 +46,10 @@
     width: 192px;
     border-radius: 5px;
   }
+  .actions {
+    display: flex;
+    .reset-btn {
+      margin-left: 20px;
+    }
+  }
 }
