--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
-body{
+body {
   margin: 0;
   padding: 0;
 }
-.main{
+.main {
   overflow: hidden;
 }
 @font-face {
@@ -16,21 +16,25 @@ body{
   src: local("BasierCircleReg"),
     url("./assets/fonts/BasierCircle-Regular.woff") format("woff");
 }
-.rdrDateRangeWrapper{
+.rdrDateRangeWrapper {
   border-left: 1px solid gainsboro;
 }
-.rdrDateRangePickerWrapper{
+.rdrDateRangePickerWrapper {
   position: absolute;
   top: 100%;
   border: 1px solid gainsboro;
   right: 5%;
 }
-.loader{
+.loader {
   display: flex;
   justify-content: center;
   align-items: center;
   padding: 10%;
 }
-.site-pagination{
+.site-pagination {
   width: 100%;
+}
+.tickets-main-div {
+  text-align: center;
+  height: 100vh;
 }
