--- a/src/components/commonComponent/commonJobStatus/commonJobStatus.scss
+++ b/src/components/commonComponent/commonJobStatus/commonJobStatus.scss
@@ -10,7 +10,8 @@
 .common-box {
   text-align: center;
   background-color: #fff;
-  border: 1px solid #ececec;
+  //border: 1px solid #ececec;
+  box-shadow: 0px 17px 24px rgba(58, 58, 58, 0.05) !important;
   box-sizing: border-box;
   border-radius: 11.6836px !important;
   display: flex;
