--- a/src/components/dashboard/dashboardServices/dashboardservices.scss
+++ b/src/components/dashboard/dashboardServices/dashboardservices.scss
@@ -1,7 +1,8 @@
 .dashboard-services-main {
   background: #ffffff;
-  border: 2px solid #ececec;
+  // border: 2px solid #ececec;
   box-sizing: border-box;
+  box-shadow: 0px 17px 24px rgba(58, 58, 58, 0.05) !important;
   border-radius: 11.6836px;
   padding: 0px 12px;
   height: 331px;
