--- a/src/components/dashboard/jobStatus/jobStatus.scss
+++ b/src/components/dashboard/jobStatus/jobStatus.scss
@@ -21,7 +21,8 @@
   text-align: center;
   background-color: #fff;
   padding: 33px 20px 20px;
-  border: 2px solid #ececec;
+  // border: 2px solid #ececec;
+  box-shadow: 0px 17px 24px rgba(58, 58, 58, 0.05) !important;
   box-sizing: border-box;
   height: 130px;
   border-radius: 11.6836px !important;
