--- a/src/components/dashboard/spendChart/spendchart.scss
+++ b/src/components/dashboard/spendChart/spendchart.scss
@@ -1,11 +1,11 @@
 .graphCard {
-  border: 2px solid #ececec;
+//  border: 2px solid #ececec;
   box-sizing: border-box;
   border-radius: 12px !important;
-  box-shadow: none !important;
+  box-shadow: 0px 17px 24px rgba(58, 58, 58, 0.05) !important;
   width: 40%;
   margin: 20px 10px;
-  height: 331px;
+  //height: 331px;
   @media only screen and (max-width: 815px) {
     width: 100%;
   } 
