--- a/src/components/commonComponent/commonSearch/commonSearch.scss
+++ b/src/components/commonComponent/commonSearch/commonSearch.scss
@@ -1,3 +1,10 @@
+.common-search-for-tables{
+  margin-bottom: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
 .search-bar-container {
   display: flex;
   align-items: center;
@@ -21,6 +28,7 @@
     display: flex;
     align-items: center;
     color: #8b8b8b;
+    background: none;
 
     &::placeholder {
       text-transform: capitalize;
