--- a/src/components/commonComponent/commonfilter/commonfilter.scss
+++ b/src/components/commonComponent/commonfilter/commonfilter.scss
@@ -30,7 +30,7 @@
     cursor: pointer;
     outline: none;
     text-transform: capitalize;
-    background: #fbfbfc;
+    background: none;
     border-radius: 3px;
     border: none;
     font-family: DM Sans;
