--- a/src/components/reactTable/pagination.scss
+++ b/src/components/reactTable/pagination.scss
@@ -1,13 +1,24 @@
 .pagination {
   display: flex;
   justify-content: flex-end;
-  font-family: "Roboto", "Helvetica", "Arial", sans-serif;
+  font-family: 'DM Sans';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 20px;
+  color: #677790;
   align-items: center;
-  margin-right: 2.5%;
+  margin-top: 1%;
   .MuiTablePagination-actions{
     display: flex;
     margin: 0 1%;
     width: 4%;
+    .previous-btn{
+      border: none;
+    }
+    .next-btn{
+      border: none;
+    }
   }
 
   @media only screen and (max-width: 1130px) {
