--- a/src/containers/reports/report.scss
+++ b/src/containers/reports/report.scss
@@ -1,4 +1,38 @@
 .main-report {
+  .report-header{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: 16px;
+    .report-grid-header{
+      width: 50%;
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      flex-direction: row;
+      flex-wrap: wrap;
+      .report-header-card{
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        padding: 2% 2%;
+        background: #fff;
+        margin-left: 5%;
+        border-radius: 16px;
+        box-shadow: 0px 17px 24px rgba(58, 58, 58, 0.05);
+        .text{
+          font-family: 'DM Sans';
+          font-style: normal;
+          font-weight: 700;
+          font-size: 14px;
+          line-height: 20px;
+          color: #677790;
+        }
+      }
+    }
+  }
 .report-grid {
   display: flex;
   justify-content: space-evenly;
