--- a/src/containers/mainDashBoard/dashboard.scss
+++ b/src/containers/mainDashBoard/dashboard.scss
@@ -67,6 +67,7 @@ hr {
   justify-content: space-between !important;
   align-items: center;
   flex-wrap: unset !important;
+  margin-top: 0 !important;;
   @media only screen and (max-width: 768px) {
     flex-wrap: wrap !important;
     width: 100%;
