--- a/src/containers/reports/report.scss
+++ b/src/containers/reports/report.scss
@@ -127,7 +127,197 @@
       .MuiInput-underline:hover:not(.Mui-disabled):before {
         border-bottom: 1px solid #52a9dd;
       }
+      .border-drop{
+        border-top: 1px solid #F5F5F5;
+        width: 100%;
+        display: flex;
+      }
+      .sub-heading{
+        width: 100%;
+        font-family: 'DM Sans';
+        font-style: normal;
+        font-weight: 500;
+        font-size: 14px;
+        line-height: 18px;
+        text-align: left;
+        color: #A4ADBC;
+        margin-top: 2%;
+      }
+      .more-drop{
+        padding: 2%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        .head-text{
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          width: 100%;
+          p{
+            font-family: 'DM Sans';
+            font-style: normal;
+            font-weight: 400;
+            font-size: 12px;
+            line-height: 16px;
+            color: #677790;
+            b{
+              color: #0F2851;
+            }
+            span{
+              font-size: 14px;
+              line-height: 20px;
+              color: #0F2851;
+            }
+          }
+        }
+        .progress-label{
+          display: flex;
+          justify-content: space-between;
+          p{
+            font-family: 'DM Sans';
+            font-style: normal;
+            font-weight: 700;
+            font-size: 14px;
+            line-height: 20px;
+            color: #0F2851;
+          }
+          .left{
+            text-align: left;
+          }
+          .right{
+            text-align: right;
+          }
+          .text{
+            font-family: 'DM Sans';
+            font-style: normal;
+            font-weight: 700;
+            font-size: 12px;
+            line-height: 16px;
+            color: #677790;
+            span{
+              font-weight: 400;
+              font-size: 12px;
+              line-height: 16px;
+              color: #677790;
+            }
+          }
+        }
+        .services{
+          display: flex;
+          justify-content: space-evenly;
+          align-items: center;
+          font-family: 'DM Sans';
+          font-style: normal;
+          font-weight: 100;
+          font-size: 25px;
+          color: #A4ADBC;
+          width: 100%;
 
+          .progress-div{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            width: 100%;
+            .progress-bar{
+              display: flex;
+              align-items: center;
+              label{
+                position: absolute;
+                font-family: 'DM Sans';
+                font-style: normal;
+                font-weight: 700;
+                font-size: 14px;
+                line-height: 20px;
+                color: #FFFFFF;
+                z-index: 1;
+                padding-left: 0.5%;
+              }
+            }
+          }
+          .waste-box{
+            display: flex;
+            justify-content: flex-start;
+            align-items: center;
+            text-align: center;
+            font-weight: 500;
+            font-size: 12px;
+            line-height: 16px;
+            width: 23%;
+            margin: 2% auto;
+            .green{
+              color: #50D226;
+            }
+            .grey{
+              color: #A4ADBC;
+            }
+            .waste-detail{
+              display: flex;
+              justify-content: space-evenly;
+              align-items: center;
+              width: 100%;
+              .name{
+                text-align: left;
+                font-weight: 500;
+                font-size: 12px;
+                line-height: 16px;
+              }
+            }
+          }
+          .service-box{
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            text-align: center;
+            .circle-wrap{
+              height: 100px;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              .circle{
+                display: flex;
+                background: #A4ADBC;
+                border-radius: 50%;
+              }
+            }
+            .service-detail{
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              flex-direction: column;
+              padding: 5% 0%;
+              .name{
+                font-weight: 700;
+                font-size: 14px;
+                line-height: 20px;
+                color: #677790;
+                padding: 5% 0%;
+              }
+              .circle-name{
+                font-size: 12px;
+                color: #A4ADBC;
+                text-align: left;
+              }
+              .percentage{
+                font-weight: 400;
+                font-size: 12px;
+                line-height: 16px;
+                color: #677790;
+              }
+              .percentage-circle{
+                color: #A4ADBC;
+                text-align: left;
+              }
+            }
+            img{
+              width: 50%;
+              opacity: 0.85;
+            }
+          }
+        }
+      }
       .salesWp {
         display: flex;
         flex-direction: column;
@@ -135,17 +325,6 @@
         justify-content: center;
         margin-bottom: 10px;
         padding: 2%;
-        .sub-heading{
-          width: 100%;
-          font-family: 'DM Sans';
-          font-style: normal;
-          font-weight: 500;
-          font-size: 14px;
-          line-height: 18px;
-          text-align: left;
-          color: #A4ADBC;
-          margin-top: 5%;
-        }
         .filters{
           display: flex;
           justify-content: space-between;
