--- a/src/containers/reports/report.scss
+++ b/src/containers/reports/report.scss
@@ -70,6 +70,34 @@
     flex-direction: row;
     flex-wrap: wrap;
     margin: 0.5% 1%;
+    .report-filters{
+      width: 100%;
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+      flex-direction: row;
+      flex-wrap: wrap;
+      .filter-item{
+        display: flex;
+        justify-content: flex-end;
+        align-items: center;
+        margin: 0 2%;
+        label{
+          font-family: 'DM Sans';
+          font-style: normal;
+          font-weight: 400;
+          font-size: 14px;
+          line-height: 20px;
+          text-align: left;
+          color: #A4ADBC;
+          margin: 0 15%;
+          width: 100%;
+        }
+        .dark{
+          color: #677790;
+        }
+      }
+    }
 
     .report-grid-header {
       width: 50%;
