--- a/src/components/reactTable/jobs-react-table.scss
+++ b/src/components/reactTable/jobs-react-table.scss
@@ -24,14 +24,14 @@
         font-size: 14px;
       }
       th{
-        padding: 0.5% 0.5%;
+        padding: 10px;
         min-width: 30px;
         color: #677790;
         font-size: 12px;
       }
       td{
         font-size: 12px;
-        padding: 0.5% 0.2%;
+        padding: 10px;
         min-width: 30px;
       }
     }
