loader and design changes

--- a/src/assets/styles/scss/_variables.scss
+++ b/src/assets/styles/scss/_variables.scss
@@ -207,6 +207,9 @@ $v110: 110px;
 .align-center {
   align-items: center;
 }
+.justify-center{
+  justify-content: center;
+}
 .flex-1{
   flex: 1;
 }
