--- a/src/components/report/reports/finance/style.scss
+++ b/src/components/report/reports/finance/style.scss
@@ -22,3 +22,30 @@
   font-size: 25px;
   color: #a4adbc;
 }
+.highcharts-container {
+  width: 100% !important;
+  height: 100% !important;
+}
+.highcharts-root {
+  width: 100%;
+  height: 100% !important;
+}
+.highcharts-series-group {
+  transform: translate(-120px, 0px) !important;
+}
+.highcharts-legend {
+  transform: translateX(350px);
+}
+.highcharts-legend-item {
+  text {
+    font-family: "DM Sans";
+    font-style: normal;
+    font-weight: 700 !important;
+    font-size: 12px !important;
+    line-height: 16px;
+    color: #677790 !important;
+  }
+}
+.highcharts-credits {
+  display: none !important;
+}
