--- a/src/assets/styles/scss/_variables.scss
+++ b/src/assets/styles/scss/_variables.scss
@@ -208,7 +208,7 @@ $v110: 110px;
   align-items: center;
 }
 .justify-center{
-  justify-content: center;
+  justify-content: center!important;
 }
 .flex-1{
   flex: 1;
