--- a/src/components/report/reports/finance/style.scss
+++ b/src/components/report/reports/finance/style.scss
@@ -30,12 +30,12 @@
   width: 100%;
   height: 100% !important;
 }
-.highcharts-series-group {
-  transform: translate(-120px, 0px) !important;
-}
-.highcharts-legend {
-  transform: translateX(350px);
-}
+// .highcharts-series-group {
+//   transform: translate(-120px, 0px) !important;
+// }
+// .highcharts-legend {
+//   transform: translateX(350px);
+// }
 .highcharts-legend-item {
   text {
     font-family: "DM Sans";
