--- a/src/components/report/reports/finance/style.scss
+++ b/src/components/report/reports/finance/style.scss
@@ -30,13 +30,7 @@
   width: 100%;
   height: 100% !important;
 }
-// .highcharts-series-group {
-//   transform: translate(-120px, 0px) !important;
-// }
-// .highcharts-legend {
-//   transform: translateX(350px);
-// }
-.highcharts-legend-item {
+.highchart-sites .highcharts-legend-item {
   text {
     font-family: "DM Sans";
     font-style: normal;
