--- a/src/components/report/reports/sitemovements/index.scss
+++ b/src/components/report/reports/sitemovements/index.scss
@@ -144,3 +144,16 @@
 .MuiTimelineItem-missingOppositeContent::before {
   display: none;
 }
+
+.high-chart-site-movement {
+  .highcharts-legend-item {
+    text {
+      font-family: "DM Sans";
+      font-style: normal;
+      font-weight: 700 !important;
+       font-size: 12px !important;
+      line-height: 16px;
+      color: #677790 !important;
+    }
+  }
+}
