--- a/src/components/report/reports/emission/index.scss
+++ b/src/components/report/reports/emission/index.scss
@@ -192,6 +192,7 @@
       }
     }
   }
+
   .more-drop {
     .progress-label {
       display: flex;
@@ -231,4 +232,11 @@
       }
     }
   }
+
+  .column-charts-highcharts- {
+    .highcharts-legend-item.highcharts-column-series.highcharts-series-0 {
+      display: none;
+    }
+  }
+
 }
