--- a/src/components/report/reports/co2breakdown/index.scss
+++ b/src/components/report/reports/co2breakdown/index.scss
@@ -52,4 +52,24 @@
       }
     }
   }
+
+  .main-progress-bar-large {
+    .circle_reactGradientProgressPercentageSpan__1HdhL {
+      top: -15px;
+    }
+
+    .text-in-progressbar {
+      position: absolute;
+      top: 50%;
+      text-align: center;
+      width: 140px;
+      font-family: 'DM Sans';
+      font-style: normal;
+      font-weight: 700;
+      font-size: 14px;
+      line-height: 20px;
+      color: #0F2851;
+    }
+  }
+
 }
