--- a/src/components/commonComponent/commonfilter/commonfilter.scss
+++ b/src/components/commonComponent/commonfilter/commonfilter.scss
@@ -38,7 +38,7 @@
     font-weight: bold;
     font-size: 12px;
     line-height: 16px;
-    color: #52a9dd;
+    color: rgb(81, 142, 248);
     height: 30px;
     margin-right: 10px;
     width: 100%;
@@ -48,7 +48,7 @@
     }
   }
   .filter-option::placeholder {
-    color: #52a9dd;
+    color: rgb(81, 142, 248);
   }
   .filter-buttons {
     margin-right: 10px;
