--- a/src/components/dashboard/dashboardServices/dashboardservices.scss
+++ b/src/components/dashboard/dashboardServices/dashboardservices.scss
@@ -25,7 +25,7 @@
       line-height: 18px;
       display: flex;
       align-items: center;
-      color: #52a9dd;
+      color: rgb(81, 142, 248);
     }
   }
   .CircularProgressbar-text {
@@ -52,6 +52,12 @@
       align-items: center;
       .CircularProgressbar {
         width: fit-content;
+        .CircularProgressbar-path{
+          stroke: #518ef8 ;
+        }
+        .CircularProgressbar-text{
+          fill: #518ef8 ;
+        }
       }
       p {
         font-family: "BasierCircleReg";
@@ -81,7 +87,7 @@
           display: flex;
           align-items: center;
           text-align: center;
-          color: #52a9dd;
+          color: rgb(81, 142, 248);
           width: max-content;
         }
         .orders {
