--- a/src/components/jobsDetail/jobNote/jobnotes.scss
+++ b/src/components/jobsDetail/jobNote/jobnotes.scss
@@ -46,7 +46,7 @@
         align-items: flex-end;
         text-align: right;
         cursor: pointer;
-        color: #52a9dd;
+        color: rgb(81, 142, 248);
       }
     }
   }
