--- a/src/components/reports/report.scss
+++ b/src/components/reports/report.scss
@@ -18,11 +18,11 @@
   .download-reports {
     margin-top: 10px;
     a {
-      color: #52a9dd !important;
+      color: rgb(81, 142, 248) !important;
     }
   }
   .generate-report {
-    background: #52a9dd;
+    background: rgb(81, 142, 248);
     color: white;
     .MuiCircularProgress-root {
       position: absolute;
@@ -30,10 +30,10 @@
     }
   }
   .MuiButton-contained:hover {
-    background: #52a9dd;
+    background: rgb(81, 142, 248);
   }
   .generate-report-disable {
-    background: #52a9dd;
+    background: rgb(81, 142, 248);
     color: white;
     opacity: 0.8;
     .MuiCircularProgress-root {
