--- a/src/components/siteManager/managerDetail/managerdetail.scss
+++ b/src/components/siteManager/managerDetail/managerdetail.scss
@@ -38,7 +38,7 @@
           font-weight: bold;
           font-size: 12px;
           line-height: 16px;
-          color: #52a9dd;
+          color: rgb(81, 142, 248);
         }
         img {
           width: 12px;
