--- a/src/components/siteManager/newManagerDetail/newmanagerdetail.scss
+++ b/src/components/siteManager/newManagerDetail/newmanagerdetail.scss
@@ -39,7 +39,7 @@
           font-weight: bold;
           font-size: 12px;
           line-height: 16px;
-          color: #52a9dd;
+          color: rgb(81, 142, 248);
         }
         img {
           width: 15px;
@@ -60,7 +60,7 @@
         font-size: 12px;
         line-height: 16px;
         text-decoration-line: underline;
-        color: #52a9dd;
+        color: rgb(81, 142, 248);
         cursor: pointer;
       }
       .info {
