--- a/src/components/sites/sitesTable/sites-table.scss
+++ b/src/components/sites/sitesTable/sites-table.scss
@@ -43,7 +43,7 @@
   }
 }
 .sites-header-btn {
-  background: #52a9dd;
+  background: rgb(81, 142, 248);
   border-radius: 64px;
   border: none;
   color: #fff;
