--- a/src/components/tiping/tipingcard.scss
+++ b/src/components/tiping/tipingcard.scss
@@ -37,7 +37,7 @@
       align-items: center;
     }
     .tip-time-btn {
-      background: #52a9dd;
+      background: rgb(81, 142, 248);
       border-radius: 64px;
       border: none;
       color: #fff;
