--- a/src/containers/reports/report.scss
+++ b/src/containers/reports/report.scss
@@ -38,7 +38,7 @@
           padding: 12px 12px;
         }
         .MuiInput-underline:hover:not(.Mui-disabled):before {
-          border-bottom: 1px solid #52a9dd;
+          border-bottom: 1px solid rgb(81, 142, 248);
         }
         .border-drop {
           border-top: 1px solid #f5f5f5;
@@ -165,7 +165,7 @@
         }
 
         .MuiInput-underline:before {
-          border-bottom: 1px solid #52a9dd !important;
+          border-bottom: 1px solid rgb(81, 142, 248) !important;
         }
       }
     }
