--- a/src/components/modals/rejectJobModal/rejectModal.scss
+++ b/src/components/modals/rejectJobModal/rejectModal.scss
@@ -45,13 +45,13 @@
     letter-spacing: 2px;
     padding: 8px 24px;
     margin-top: 16px;
-    background: #29a7df;
+    background: #518ef8;
     text-transform: capitalize;
     font-size: 14px;
     margin-bottom: 20px;
 
     &:hover {
-      background: #29a7df;
+      background: #518ef8;
       box-shadow: none;
     }
 
