--- a/src/index.css
+++ b/src/index.css
@@ -55,3 +55,12 @@ body {
   justify-content: flex-start !important;
   align-items: flex-start !important;
 }
+.MuiDialogTitle-root{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+.MuiDialogTitle-root .MuiIconButton-sizeMedium{
+  top: 0px;
+}
