--- a/src/components/sites/sitesDetailPage/sitesDetailPage.scss
+++ b/src/components/sites/sitesDetailPage/sitesDetailPage.scss
@@ -24,3 +24,19 @@
   min-height: 100vh;
   text-align: center;
 }
+.progress-bar {
+  display: flex;
+  align-items: center;
+
+  label {
+    position: absolute;
+    font-family: "DM Sans";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 20px;
+    color: #ffffff;
+    z-index: 1;
+    padding-left: 0.5%;
+  }
+}
