--- a/src/containers/mainDashBoard/dashboard.scss
+++ b/src/containers/mainDashBoard/dashboard.scss
@@ -84,3 +84,19 @@ hr {
   width: 100%;
   margin-top: 300px;
 }
+.progress-bar {
+  display: flex;
+  align-items: center;
+
+  label {
+    position: absolute;
+    font-family: "DM Sans";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 20px;
+    color: #ffffff;
+    z-index: 1;
+    padding-left: 0.5%;
+  }
+}
