--- a/src/components/dashboard/dashboardServices/dashboardservices.scss
+++ b/src/components/dashboard/dashboardServices/dashboardservices.scss
@@ -1,13 +1,16 @@
 .dashboard-services-main {
   background: #ffffff;
+  overflow: auto;
   // border: 2px solid #ececec;
   box-sizing: border-box;
   box-shadow: 0px 17px 24px rgba(58, 58, 58, 0.05) !important;
   border-radius: 11.6836px;
   padding: 0px 12px;
-  height: 331px;
+  max-height: 400px;
+  height: 100%;
   margin-right: 10px;
   width: 60%;
+
   @media only screen and (max-width: 768px) {
     width: 100% !important;
   }
@@ -28,6 +31,7 @@
       color: rgb(81, 142, 248);
     }
   }
+
   .CircularProgressbar-text {
     font-family: "BasierCircleReg";
     font-style: normal;
@@ -39,26 +43,33 @@
     text-align: center;
     fill: #000;
   }
+
   .progress-main {
     display: flex;
     justify-content: flex-start;
-    padding-top: 60px;
+    // padding-top: 60px;
+    flex-wrap: wrap;
     overflow: auto;
+
     .circular-progress {
       width: 180px;
       height: 180px;
       display: flex;
       flex-direction: column;
       align-items: center;
+
       .CircularProgressbar {
         width: fit-content;
-        .CircularProgressbar-path{
-          stroke: #518ef8 ;
+
+        .CircularProgressbar-path {
+          stroke: #518ef8;
         }
-        .CircularProgressbar-text{
-          fill: #518ef8 ;
+
+        .CircularProgressbar-text {
+          fill: #518ef8;
         }
       }
+
       p {
         font-family: "BasierCircleReg";
         font-style: normal;
@@ -73,11 +84,14 @@
         margin-bottom: 9px;
       }
     }
+
     .progress-sub {
       display: flex;
       align-items: center;
-      padding-bottom: 10px;
+      padding: 10px;
+
       .order-percentage {
+
         .order-title {
           font-family: "BasierCircleReg";
           font-style: normal;
@@ -90,6 +104,7 @@
           color: rgb(81, 142, 248);
           width: max-content;
         }
+
         .orders {
           font-family: "BasierCircleReg";
           font-style: normal;
@@ -103,9 +118,20 @@
           color: #000000;
         }
       }
+
       .order-percentage:last-child {
-        padding-right: 10px;
+        padding-left: 10px;
       }
     }
+  }
+
+  .circle-text {
+    position: absolute;
+    top: 72px;
+    width: 180px;
+    text-align: center;
+    font-size: 26px;
+    color: #518ef8;
+    font-family: "DM Sans";
   }
 }
