--- a/src/components/dashboard/spendChart/spendchart.scss
+++ b/src/components/dashboard/spendChart/spendchart.scss
@@ -4,7 +4,7 @@
   border-radius: 12px !important;
   box-shadow: 0px 17px 24px rgba(58, 58, 58, 0.05) !important;
   width: 40%;
-  margin: 20px 10px;
+  margin: 20px 10px 20px 0px;
   //height: 331px;
   @media only screen and (max-width: 815px) {
     width: 100%;
