--- a/src/components/report/reports/emission/index.scss
+++ b/src/components/report/reports/emission/index.scss
@@ -173,6 +173,7 @@
       justify-content: space-between;
 
       button {
+        cursor: pointer;
         display: flex;
         border: none;
         outline: none;
