--- a/src/components/report/reports/emission/index.scss
+++ b/src/components/report/reports/emission/index.scss
@@ -240,4 +240,45 @@
     }
   }
 
+  .main-emission-break-down {
+    display: flex;
+    overflow-x: auto;
+    margin: 20px 0px;
+    width: 100%;
+
+    .inner-break-down {
+      margin: 10px;
+      max-width: 100%;
+      width: 100%;
+
+      .circle-main {
+        height: 100px;
+        display: flex;
+        align-items: center;
+      }
+
+      .site-name {
+        margin: 40px 0px 20px 0px;
+
+        .site {
+          font-weight: 700;
+          font-size: 14px;
+          line-height: 20px;
+          color: #677790;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          width: 100%;
+          white-space: pre;
+        }
+
+        .percentage {
+          font-weight: 400;
+          font-size: 12px;
+          line-height: 16px;
+          color: #677790;
+        }
+      }
+    }
+  }
+
 }
