--- a/src/components/report/reports/emission/index.scss
+++ b/src/components/report/reports/emission/index.scss
@@ -282,3 +282,84 @@
   }
 
 }
+
+.date-picker-main {
+  cursor: pointer;
+
+  .react-datepicker__year-text--keyboard-selected {
+    background-color: #fff;
+    color: #000;
+  }
+
+  .react-datepicker__year-text--selected {
+    font-family: "DM Sans";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 20px;
+    text-align: center;
+    color: #ffffff;
+    text-transform: none;
+    padding: 0.8% 3%;
+    border-radius: 25px;
+    background: linear-gradient(180deg, #73c6f9 0%, #5391f9 100%);
+  }
+
+  .react-datepicker__year-text {
+    font-family: "DM Sans";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    padding: 0.8% 3%;
+    line-height: 20px;
+    text-align: center;
+    border-radius: 25px;
+    width: 3rem !important;
+    align-items: center;
+    justify-content: center;
+    display: flex !important;
+    height: 2rem;
+  }
+
+  .react-datepicker {
+    box-shadow: 0 17px 24px rgba(58, 58, 58, 0.05) !important;
+    border: #aeaeae2e;
+  }
+
+  .react-datepicker__header {
+    border-bottom: none;
+    font-family: "DM Sans";
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 20px;
+    color: #fff;
+    background: linear-gradient(180deg, #73c6f9 0%, #5391f9 100%);
+
+  }
+
+  .react-datepicker-popper[data-placement^="bottom"] .react-datepicker__triangle::before {
+    border-bottom-color: #fff;
+  }
+
+  .react-datepicker-popper[data-placement^="bottom"] .react-datepicker__triangle::after {
+    border: unset;
+  }
+
+  .react-datepicker__year-wrapper {
+    max-width: 220px;
+  }
+
+  .react-datepicker__year-text--keyboard-selected:hover {
+    background-color: #f0f0f0;
+  }
+}
+
+.example-custom-input {
+  font-family: "DM Sans";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 20px;
+  color: #0f2851;
+}
