--- a/src/components/report/reports/finance/style.scss
+++ b/src/components/report/reports/finance/style.scss
@@ -1,35 +1,49 @@
 .main-for-carusal {
   margin-top: 15px;
+
   .name {
     font-weight: 700;
     font-size: 14px;
     line-height: 20px;
     color: #677790;
-    padding: 5% 0;
+    padding: 10px 0px;
   }
+
   .percentage {
     font-weight: 400;
     font-size: 12px;
     line-height: 16px;
     color: #677790;
   }
+
   .service-box {
     text-align: center;
   }
+
+  .span-for-arrows {
+    display: flex;
+    align-items: center;
+    font-size: 26px;
+    cursor: pointer;
+  }
 }
+
 .span-arrows-for-carusal {
   cursor: pointer;
   font-size: 25px;
   color: #a4adbc;
 }
+
 .highcharts-container {
   width: 100% !important;
   height: 100% !important;
 }
+
 .highcharts-root {
   width: 100%;
   height: 100% !important;
 }
+
 .highchart-sites .highcharts-legend-item {
   text {
     font-family: "DM Sans";
@@ -40,6 +54,7 @@
     color: #677790 !important;
   }
 }
+
 .highcharts-credits {
   display: none !important;
 }
