--- a/src/components/reactTable/jobs-react-table.scss
+++ b/src/components/reactTable/jobs-react-table.scss
@@ -3,10 +3,12 @@
   background: white;
   border-radius: 11px;
   box-shadow: 0px 17px 24px rgba(58, 58, 58, 0.05);
+
   @media only screen and (max-width: 1224px) {
     overflow: auto;
   }
-  table{
+
+  table {
     font-family: 'DM Sans';
     font-style: normal;
     font-weight: 400;
@@ -16,29 +18,38 @@
     text-align: left;
     width: 100%;
     border-collapse: collapse;
-    tr{
+
+    tr {
       border: none !important;
+
       td:first-child {
         font-weight: bolder;
         color: black;
         font-size: 14px;
       }
-      th{
+
+      th {
         padding: 10px;
         min-width: 30px;
         color: #677790;
         font-size: 12px;
       }
-      td{
+
+      td {
         font-size: 12px;
         padding: 10px;
         min-width: 30px;
       }
     }
-    tbody{
-      .even{
+
+    tbody {
+      .even {
         background: #F6F6F6;
       }
+    }
+
+    .action-for-site {
+      min-width: 200px;
     }
   }
 }
